# minisumo-scalak

./: .gitignore  README.md
ScalakMinisumoProgram/: ScalakMinisumoProgram.atsln
ScalakMinisumoProgram/ScalakMinisumoProgram/: ScalakMinisumoProgram.componentinfo.xml  ScalakMinisumoProgram.cproj  main.c
ScalakMinisumoProgram/ScalakMinisumoProgram/Debug/: Makefile  ScalakMinisumoProgram.elf  ScalakMinisumoProgram.hex  ScalakMinisumoProgram.lss  ScalakMinisumoProgram.map  ScalakMinisumoProgram.srec  main.d  makedep.mk
app/SumoMenager/: settings.gradle
app/SumoMenager/app/: build.gradle
app/SumoMenagerV3/: settings.gradle
app/SumoMenagerV3/app/: build.gradle
app/SumoMenagerV4/: settings.gradle
app/SumoMenagerV4/app/: build.gradle
app/Test_App/: settings.gradle
app/Test_App/app/: build.gradle
docs/: speedFactor.xlsx
docs/bills/: Cennik.xlsx  Cennik2.xlsx  ostateczneRozliczenie.xlsx
docs/others/: ToDoList_28_02_2019.txt  ciekawe.txt  components.txt  kandydaci.txt
hardware/scalak_main_board/: scalak_lib.lib  scalak_main_board-cache.lib  scalak_main_board.pro  scalak_main_board.sch  scalak_main_board.sch-bak  sym-lib-table
mechanics/: SCALAK_nazwa_może_ulec_zmianie.dwg
mechanics/Pliki CAD/: MR45.x_t  MiniSumoWheel.IGS
mechanics/Pliki CAD/IR 38 kHz/: Proximity Sensor.IGS  Proximity Sensor.SLDPRT  proximity_sensor.prt.1
mechanics/Pliki CAD/Pololu Micro Motor  with hub and mounting/: MicroGearmotor_Pololu_1101.f3d  MicroGearmotor_Pololu_1101.igs
mechanics/Pliki CAD/QTR-1A/: Drawing1.dwl  Drawing1.dwl2
mechanics/metal_parts/: FelgaV1.dwg  FelgaV2.dwg  PłytaV1.dwg
mechanics/plastic_parts/: wheelFormV2.3mf  wheelFormV3.3mf  wheelFormWheelRim.3mf
software/: freq.txt  timerTiming.txt
software/Scalak_Pure_Power/: Scalak_Pure_Power.atsln
software/Scalak_Pure_Power/Scalak_Pure_Power/: Hardware.cpp  Hardware.h  PID_Controller.cpp  PID_Controller.h  RC5.cpp  Scalak_Pure_Power.componentinfo.xml  Scalak_Pure_Power.cppproj  Scalak_lib.cpp  Scalak_lib.h  UART.cpp  UART.h  WS2812B.h  main.cpp
software/Scalak_State_Machine/: Scalak_State_Machine.atsln
software/Scalak_State_Machine/Scalak_State_Machine/: Scalak_State_Machine.componentinfo.xml  Scalak_State_Machine.cproj  main.c  program_state_machine.h  scalak_lib.c  scalak_lib.h  tactics_state_machine.h
software/arduino/: enkoder.txt  premiumCPP.txt  premiumHeader.txt
software/arduino/NECDecoder/: NECDecoder.ino
software/arduino/NN_backTEST/: NN_backTEST.ino
software/arduino/NeuroScalak_V0.1/: NeuroScalak_V0.1.ino
software/arduino/NeuroScalak_V0.2/: NeuroScalak_V0.2.ino
software/arduino/RC-5_decoder/: RC-5_decoder.ino
software/arduino/SCALAK_V0.2/: SCALAK_V0.2.ino
software/arduino/SCALAK_V3.4/: SCALAK_V3.4.ino
software/arduino/SCALAK_V3.6/: search.ino
software/arduino/SCALAK_V4.1/: SCALAK_V4.1.ino
software/arduino/SCALAK_V4.1_AngleDetection/: SCALAK_V4.1_AngleDetection.ino
software/arduino/SCALAK_V4.1_Encoder/: search.ino  (+1 more)
software/scalak-cmake-final/: CMakeLists.txt  README.md  avr-toolchain.cmake  options.cmake
software/scalak-cmake-final/app/inc/: finite_state_machine.h  led.h  motors.h  periph.h  pid.h  program_state_machine.h  rc5.h  robot.h  scalak_lib.h  scheduler.h  state_machine.h  tactics_state_machine.h  uart.h  ws2812b.h
software/scalak-cmake-final/app/src/: finite_state_machine.c  led.c  main.c  motors.c  periph.c  pid.c  rc5.c  robot.c  scalak_lib.c  state_machine.c  uart.c  ws2812b.c
software/scalak-cmake-final/inc/: rc5.h
software/scalak-cmake-final/scheduler-c/: CMakeLists.txt
software/scalak-cmake-final/scheduler-c/inc/: scheduler.h
software/scalak-cmake-final/scheduler-c/src/: scheduler.c
software/scalak-cmake-final/src/: led.c  motors.c  periph.c  rc5.c  robot.c  scheduler.c  state_machine.c  uart.c
software/scalak-cmake-final/state-machine-c/: CMakeLists.txt
software/scalak-cmake-final/state-machine-c/inc/: finite_state_machine.h
software/scalak-cmake-final/state-machine-c/src/: finite_state_machine.c
(+249 files in other folders)
